[metadata]
name = game-server-manager-austinhellerrepo
version = 0.0.1
author = Austin Heller
description = A package that permits expansion and encapsulates the functioning of a game server
url = https://github.com/AustinHellerRepo/GameServerManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
