[metadata]
name = game-server-manager-austinhellerrepo
version = 0.0.6
author = Austin Heller
description = A package that permits expansion and encapsulates the functioning of a game server
url = https://github.com/AustinHellerRepo/GameServerManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  socket-austinhellerrepo@git+https://github.com/AustinHellerRepo/Socket
  threading-austinhellerrepo@git+https://github.com/AustinHellerRepo/Threading

[options.packages.find]
where = src
